sort model names in stacking

--- a/codes/code_3_stacking.ipynb
+++ b/codes/code_3_stacking.ipynb
@@ -144,13 +144,13 @@
     "### IMPORT OOF PREDS\n",
     "\n",
     "# list names\n",
-    "names = os.listdir('../oof_preds')\n",
+    "names = sorted(os.listdir('../oof_preds'))\n",
     "\n",
     "# preprocessing loop\n",
     "for name in names:\n",
     "\n",
     "    # load preds\n",
-    "    tmp_tr = pd.read_csv('../oof_preds/' + str(name))\n",
+    "    tmp_tr = pd.read_csv('../oof_preds/'   + str(name))\n",
     "    tmp_te = pd.read_csv('../submissions/' + str(name))\n",
     "\n",
     "    # sort OOF preds by ID\n",
