--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -55,12 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# white axis labeles\n",
-    "params = {'ytick.color' :     'w',\n",
-    "          'xtick.color' :     'w',\n",
-    "          'axes.labelcolor' : 'w',\n",
-    "          'axes.edgecolor' :  'w'}\n",
-    "plt.rcParams.update(params)"
+    "# dark background style\n",
+    "plt.style.use('dark_background')"
    ]
   },
   {
@@ -277,6 +273,10 @@
     "    trn_x, trn_y = train[features].iloc[trn_idx], y.iloc[trn_idx]\n",
     "    val_x, val_y = train[features].iloc[val_idx], y.iloc[val_idx]\n",
     "    \n",
+    "    ## remove outliers\n",
+    "    #out_idx = (np.abs(scipy.stats.zscore(trn_x)) < 10).all(axis = 1)\n",
+    "    #trn_x = trn_x[out_idx]\n",
+    "    #trn_y = trn_y[out_idx]\n",
     "    \n",
     "    # scale data\n",
     "    scaler   = RobustScaler()\n",
@@ -429,7 +429,7 @@
     "plt.figure(figsize = (10,4))\n",
     "sns.lineplot(x = cutoffs[10:step], y = profits[10:step], color = 'red')\n",
     "plt.tight_layout()\n",
-    "plt.axvline(x = cutoffs[np.argmax(profits)], color = 'black', linestyle = '--')\n",
+    "plt.axvline(x = cutoffs[np.argmax(profits)], color = 'white', linestyle = '--')\n",
     "print('- optimal cutoff = %.4f' % cutoffs[np.argmax(profits)])\n",
     "print('- optimal profit = %.4f' % profits[np.argmax(profits)])\n",
     "plt.savefig('../cutoff_selection.pdf')"
@@ -519,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
