add profit threshold for entering stacking

--- a/codes/code_3_stacking.ipynb
+++ b/codes/code_3_stacking.ipynb
@@ -52,12 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# white axis labeles\n",
-    "params = {'ytick.color' :     'w',\n",
-    "          'xtick.color' :     'w',\n",
-    "          'axes.labelcolor' : 'w',\n",
-    "          'axes.edgecolor' :  'w'}\n",
-    "plt.rcParams.update(params)"
+    "# dark background style\n",
+    "plt.style.use('dark_background')"
    ]
   },
   {
@@ -143,8 +139,12 @@
    "source": [
     "### IMPORT OOF PREDS\n",
     "\n",
+    "# profit threshold\n",
+    "min_profit = 250\n",
+    "\n",
     "# list names\n",
     "names = sorted(os.listdir('../oof_preds'))\n",
+    "names = [n for n in names if int(n[n.rindex('_')+1:-4]) > min_profit]\n",
     "\n",
     "# preprocessing loop\n",
     "for name in names:\n",
@@ -172,7 +172,7 @@
     "        \n",
     "# display information\n",
     "print('- Train shape:', train.shape)\n",
-    "print('- Test shape:', train.shape)"
+    "print('- Test shape:',  train.shape)"
    ]
   },
   {
@@ -333,7 +333,8 @@
     "\n",
     "###### TRACKING RESULTS (5 folds, start = True, seed = 999)\n",
     "\n",
-    "# stacking 8 models: 390 = 85 + 65 + 45 + 105 + 90"
+    "# stacking 8 LGB models:        390 = 85 + 65 + 45 + 105 + 90\n",
+    "# 6 LGB models (profit > 250):  390 = 85 + 65 + 45 + 105 + 90"
    ]
   },
   {
@@ -358,7 +359,7 @@
     "plt.figure(figsize = (10,4))\n",
     "sns.lineplot(x = cutoffs[10:step], y = profits[10:step], color = 'red')\n",
     "plt.tight_layout()\n",
-    "plt.axvline(x = cutoffs[np.argmax(profits)], color = 'black', linestyle = '--')\n",
+    "plt.axvline(x = cutoffs[np.argmax(profits)], color = 'white', linestyle = '--')\n",
     "print('- optimal cutoff = %.4f' % cutoffs[np.argmax(profits)])\n",
     "print('- optimal profit = %.4f' % profits[np.argmax(profits)])"
    ]
