minor code/name changes, nothing new

--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -206,7 +206,7 @@
     "    'boosting_type':     'gbdt',\n",
     "    'objective':         'binary',\n",
     "    'metrics':           'binary_logloss',\n",
-    "    'subsample':         0.9,\n",
+    "    'bagging_fraction':  0.9,\n",
     "    'feature_fraction':  0.8,\n",
     "    'lambda_l1':         0.1,\n",
     "    'lambda_l2':         0.1,\n",
@@ -289,9 +289,10 @@
     "    trn_x = pd.DataFrame(trn_x, columns = features)\n",
     "    trn_y = pd.Series(trn_y)\n",
     "    \n",
+    "    # factor decomposition\n",
     "    tmp_features = copy.deepcopy(features)\n",
     "    if False:\n",
-    "        decomp = FactorAnalysis(n_components=11)\n",
+    "        decomp = FactorAnalysis(n_components = 11)\n",
     "        decomp.fit(trn_x)\n",
     "        trn_x = decomp.transform(trn_x)\n",
     "        val_x = decomp.transform(val_x)\n",
@@ -392,7 +393,7 @@
     "importance = importances.loc[importances.Feature.isin(cols)]\n",
     "    \n",
     "# plot variable importance\n",
-    "plt.figure(figsize = (10,6))\n",
+    "plt.figure(figsize = (10, 6))\n",
     "sns.barplot(x = 'Importance', y = 'Feature', data = importance.sort_values(by = 'Importance', ascending = False))\n",
     "plt.tight_layout()\n",
     "\n",
@@ -497,7 +498,7 @@
    "outputs": [],
    "source": [
     "# check correlation with previous submission\n",
-    "prev_sub = pd.read_csv('../submissions/lgb_v7_350.csv')\n",
+    "prev_sub = pd.read_csv('../submissions/lgb_v8_375.csv')\n",
     "cor = np.sum(prev_sub[target] == sub.reset_index()[target]) / len(sub)\n",
     "print(\"Share of the same predictions: \" + str(np.round(cor, 6)))"
    ]
