--- a/codes/code_3_stacking.ipynb
+++ b/codes/code_3_stacking.ipynb
@@ -224,7 +224,7 @@
     "    'boosting_type':     'gbdt',\n",
     "    'objective':         'binary',\n",
     "    'metrics':           'binary_logloss',\n",
-    "    'subsample':         0.9,\n",
+    "    'bagging_fraction':  0.9,\n",
     "    'feature_fraction':  0.8,\n",
     "    'lambda_l1':         0.1,\n",
     "    'lambda_l2':         0.1,\n",
@@ -333,8 +333,8 @@
     "\n",
     "###### TRACKING RESULTS (5 folds, start = True, seed = 999)\n",
     "\n",
-    "# stacking 8 LGB models:        390 = 85 + 65 + 45 + 105 + 90\n",
-    "# 6 LGB models (profit > 250):  390 = 85 + 65 + 45 + 105 + 90"
+    "# V1: stacking 8 LGB models:        390 = 85 + 65 + 45 + 105 + 90\n",
+    "# V2: 6 LGB models (profit > 250):  390 = 85 + 65 + 45 + 105 + 90"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'stack_8'\n",
+    "model = 'stack_v2'\n",
     "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
@@ -414,7 +414,7 @@
    "outputs": [],
    "source": [
     "# check correlation with previous submission\n",
-    "prev_sub = pd.read_csv('../submissions/lgb_v8_375.csv')\n",
+    "prev_sub = pd.read_csv('../submissions/stack_v1_390.csv')\n",
     "cor = np.sum(prev_sub[target] == sub.reset_index()[target]) / len(sub)\n",
     "print(\"Share of the same predictions: \" + str(np.round(cor, 6)))"
    ]
