--- a/codes/code_2_catboost_main.ipynb
+++ b/codes/code_2_catboost_main.ipynb
@@ -207,10 +207,10 @@
     "    'boosting_type':     'Plain',\n",
     "    'objective':         'Logloss', #'metrics':           'binary_logloss',\n",
     "    'bootstrap_type':    'Bernoulli',\n",
-    "    'subsample':         0.9, # bagging_fraction\n",
-    "    'rsm':               0.8, # feature_fraction\n",
-    "    'model_size_reg':    0.1, # lambda_l1\n",
-    "    'l2_leaf_reg':       0.1, # lambda_l2\n",
+    "    'subsample':         0.6, # bagging_fraction\n",
+    "    'rsm':               0.7, # feature_fraction\n",
+    "    'model_size_reg':    0,#.1, # lambda_l1\n",
+    "    'l2_leaf_reg':       0, # lambda_l2\n",
     "    #'min_split_gain':    0.01, #TODO\n",
     "    #'min_child_weight':  2, #TODO\n",
     "    'verbose':           False, #'silent': True,\n",
@@ -410,30 +410,9 @@
     "\n",
     "###### TRACKING RESULTS (5 folds, strat = True, seed = 23) for CATBOOST\n",
     "\n",
-    "# V1: implementing CATBOOST: 210 = 70 - 15 + 65 + 15 + 75\n",
+    "# V1: implementing CATBOOST: 215 = 85 - 15 + 65 - 10 + 90\n",
+    "# V2: param opt:             250 = 75 + 35 + 55 + 15 + 70\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### VARIABLE IMPORTANCE\n",
-    "\n",
-    "# load importance    \n",
-    "top_feats = 100\n",
-    "cols = importances[['Feature', 'Importance']].groupby('Feature').mean().sort_values(by = 'Importance', ascending = False)[0:top_feats].index\n",
-    "importance = importances.loc[importances.Feature.isin(cols)]\n",
-    "    \n",
-    "# plot variable importance\n",
-    "plt.figure(figsize = (10, 6))\n",
-    "sns.barplot(x = 'Importance', y = 'Feature', data = importance.sort_values(by = 'Importance', ascending = False))\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# save plot as pdf\n",
-    "plt.savefig('../var_importance_catboost.pdf')"
    ]
   },
   {
@@ -485,7 +464,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'cb_v1'\n",
+    "model = 'cb_v2'\n",
     "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
@@ -499,7 +478,8 @@
     "# export OOF preds\n",
     "oof = pd.DataFrame({'id': train['id'], 'fraud': preds_oof})\n",
     "oof.to_csv('../oof_preds/' + str(name) + '.csv', index = False)\n",
-    "oof.head()"
+    "oof.head()\n",
+    "name"
    ]
   },
   {
@@ -523,8 +503,7 @@
     "# export submission\n",
     "sub = sub[['fraud']]\n",
     "sub.to_csv('../submissions/' + str(name) + '.csv', index = False)\n",
-    "sub.shape\n",
-    "name"
+    "sub.shape"
    ]
   },
   {
