Added semi-supervised learning with self-trainining. Does not improve profits :(

--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -22,6 +22,7 @@
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.decomposition import PCA, FastICA, FactorAnalysis\n",
+    "from sklearn.metrics import log_loss\n",
     "import copy\n",
     "import scipy.stats\n",
     "import os\n",
@@ -280,7 +281,7 @@
     "    \n",
     "    # scale data\n",
     "    scaler   = RobustScaler()\n",
-    "    trn_x    = scaler.fit_transform(trn_x)\n",
+    "    trn_x    = pd.DataFrame(scaler.fit_transform(trn_x),      columns = features)\n",
     "    val_x    = pd.DataFrame(scaler.transform(val_x),          columns = features)\n",
     "    tmp_test = pd.DataFrame(scaler.transform(test[features]), columns = features)\n",
     "\n",
@@ -291,13 +292,13 @@
     "    \n",
     "    # factor decomposition\n",
     "    tmp_features = copy.deepcopy(features)\n",
-    "    if False:\n",
-    "        decomp = FactorAnalysis(n_components = 11)\n",
-    "        decomp.fit(trn_x)\n",
-    "        trn_x = decomp.transform(trn_x)\n",
-    "        val_x = decomp.transform(val_x)\n",
-    "        tmp_test = decomp.transform(tmp_test)\n",
-    "        tmp_features = ['pc'+str(i) for i in range(decomp.n_components)]\n",
+    "    #if False:\n",
+    "    #    decomp = FactorAnalysis(n_components = 11)\n",
+    "    #    decomp.fit(trn_x)\n",
+    "    #    trn_x = decomp.transform(trn_x)\n",
+    "    #    val_x = decomp.transform(val_x)\n",
+    "    #    tmp_test = decomp.transform(tmp_test)\n",
+    "    #    tmp_features = ['pc'+str(i) for i in range(decomp.n_components)]\n",
     "    \n",
     "    # add noise to train to reduce overfitting\n",
     "    #trn_x += np.random.normal(0, 0.01, trn_x.shape)\n",
@@ -322,8 +323,55 @@
     "    best_iter = np.argmax(clf.evals_result_['valid_1']['profit']) + 1\n",
     "    print('Best iteration is:')\n",
     "    print('[' + str(best_iter) + ']   valid_1 profit: ' + \n",
-    "          str(prediction_reward(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1])[1].astype('int')))\n",
-    "       \n",
+    "          str(prediction_reward(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1])[1].astype('int')) + \n",
+    "          \"; log_loss = \", str(np.round(log_loss(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]), 6)))\n",
+    "    \n",
+    "    \n",
+    "############ PERFORM 1 ITERATRION OF SELF-TRAINING\n",
+    "#\n",
+    "#    # predict unlabeled data\n",
+    "#    tmp_preds_test = clf.predict_proba(tmp_test, num_iteration = best_iter)[:, 1]\n",
+    "#\n",
+    "#    # extract most confident preds\n",
+    "#    perc_ones  = 0.0001\n",
+    "#    perc_zeros = 0.0001\n",
+    "#    pmax = np.quantile(tmp_preds_test, 1 - perc_ones)\n",
+    "#    pmin = np.quantile(tmp_preds_test, perc_zeros)\n",
+    "#    tmp_preds_test[tmp_preds_test >= pmax] = 1\n",
+    "#    tmp_preds_test[tmp_preds_test <= pmin] = 0\n",
+    "#    confident_ones  = np.where(tmp_preds_test == 1)\n",
+    "#    confident_zeros = np.where(tmp_preds_test == 0)\n",
+    "#    confident_ones  = confident_ones[0][0:np.round(len(tmp_test)  * perc_ones).astype('int')]\n",
+    "#    confident_zeros = confident_zeros[0][0:np.round(len(tmp_test) * perc_zeros).astype('int')]\n",
+    "#    confident_idx   = np.concatenate((confident_ones, confident_zeros))\n",
+    "#\n",
+    "#    # append new data to train\n",
+    "#    test_X = tmp_test.iloc[confident_idx]\n",
+    "#    test_y = pd.Series(tmp_preds_test[confident_idx])\n",
+    "#    trn_x  = trn_x.append(test_X)\n",
+    "#    trn_y  = trn_y.append(test_y)\n",
+    "#    print('--------------------------------')\n",
+    "#    print('Added %.0f cases to training data...' % len(test_y))\n",
+    "#    print('--------------------------------')\n",
+    "#\n",
+    "#    # retrain lightGBM\n",
+    "#    print('Custom early stopping: select the best out of %.0f iterations...' % max_rounds)\n",
+    "#    clf = lgb.LGBMClassifier(**lgb_params) \n",
+    "#    clf = clf.fit(trn_x, trn_y, \n",
+    "#                  eval_set              = [(trn_x, trn_y), (val_x, val_y)], \n",
+    "#                  eval_metric           = prediction_reward, \n",
+    "#                  verbose               = verbose)\n",
+    "#\n",
+    "#    # find the best iteration\n",
+    "#    best_iter = np.argmax(clf.evals_result_['valid_1']['profit']) + 1\n",
+    "#    print('Best iteration is:')\n",
+    "#    print('[' + str(best_iter) + ']   valid_1 profit: ' + \n",
+    "#          str(prediction_reward(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1])[1].astype('int')) + \n",
+    "#          \"; log_loss = \", str(np.round(log_loss(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]), 6)))\n",
+    "#    \n",
+    "############ PERFORM 1 ITERATRION OF SELF-TRAINING\n",
+    "\n",
+    "\n",
     "    # predictions\n",
     "    preds_oof[val_idx]    = clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]\n",
     "    valid_profit[n_fold]  = prediction_reward(val_y, preds_oof[val_idx])[1]\n",
@@ -337,24 +385,24 @@
     "    importances = pd.concat([importances, fold_importance_df], axis = 0)\n",
     "    \n",
     "    # print performance\n",
-    "    print('----------------------')\n",
+    "    print('--------------------------------')\n",
     "    print('FOLD%2d: PROFIT = %.0f' % (n_fold + 1, valid_profit[n_fold]))\n",
-    "    print('----------------------')\n",
+    "    print('--------------------------------')\n",
     "    print('')\n",
     "        \n",
     "    # clear memory\n",
     "    del trn_x, trn_y, val_x, val_y\n",
     "    gc.collect()\n",
     "    \n",
-    "    # uncomment with mean target encoding\n",
+    "    # uncomment for mean target encoding\n",
     "    #features = [f for f in train.columns if f not in excluded_feats]\n",
     "    \n",
     "    \n",
     "# print overall performance    \n",
     "cv_perf = np.sum(valid_profit)\n",
-    "print('----------------------')\n",
+    "print('--------------------------------')\n",
     "print('TOTAL PROFIT = %.0f' % cv_perf)\n",
-    "print('----------------------')"
+    "print('--------------------------------')"
    ]
   },
   {
