changed parameters ==>  profit of 400

--- a/codes/code_3_stacking.ipynb
+++ b/codes/code_3_stacking.ipynb
@@ -229,8 +229,8 @@
     "    'lambda_l1':         0.1,\n",
     "    'lambda_l2':         0.1,\n",
     "    'min_split_gain':    0.01,\n",
-    "    'min_child_weight':  2,\n",
-    "    'min_child_samples': 20,\n",
+    "    'min_child_weight':  1,\n",
+    "    'min_child_samples': 1,\n",
     "    'silent':            True,\n",
     "    'verbosity':         -1,\n",
     "    'learning_rate':     0.1,\n",
@@ -326,6 +326,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "##### RECHECK PROFIT  \n",
     "prediction_reward(y, preds_oof)\n",
@@ -334,7 +341,8 @@
     "###### TRACKING RESULTS (5 folds, start = True, seed = 999)\n",
     "\n",
     "# V1: stacking 8 LGB models:        390 = 85 + 65 + 45 + 105 + 90\n",
-    "# V2: 6 LGB models (profit > 250):  390 = 85 + 65 + 45 + 105 + 90"
+    "# V2: 6 LGB models (profit > 250):  390 = 85 + 65 + 45 + 105 + 90\n",
+    "# V3: changed min_child arguments:  400 = 95 + 65 + 45 + 105 + 90"
    ]
   },
   {
@@ -378,7 +386,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'stack_v2'\n",
+    "model = 'stack_v3'\n",
     "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
@@ -414,10 +422,17 @@
    "outputs": [],
    "source": [
     "# check correlation with previous submission\n",
-    "prev_sub = pd.read_csv('../submissions/stack_v1_390.csv')\n",
+    "prev_sub = pd.read_csv('../submissions/stack_v2_390.csv')\n",
     "cor = np.sum(prev_sub[target] == sub.reset_index()[target]) / len(sub)\n",
     "print(\"Share of the same predictions: \" + str(np.round(cor, 6)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -436,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
