minor code corrections (no relevant changes)

--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -318,14 +318,14 @@
     "                  verbose               = verbose)\n",
     "    clfs.append(clf)\n",
     "    \n",
-    "    # find the best iteration\n",
+    "    # predict validation from the best iteration\n",
     "    #best_iter = clf.best_iteration_\n",
     "    best_iter = np.argmax(clf.evals_result_['valid_1']['profit']) + 1\n",
+    "    val_preds = clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]\n",
     "    print('Best iteration is:')\n",
-    "    print('[' + str(best_iter) + ']   valid_1 profit: ' + \n",
-    "          str(prediction_reward(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1])[1].astype('int')) + \n",
-    "          \"; log_loss = \", str(np.round(log_loss(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]), 6)))\n",
-    "    \n",
+    "    print('[' + str(best_iter) + ']   valid_1 profit: ' + str(prediction_reward(val_y, val_preds)[1].astype('int')) + \n",
+    "          \"; log_loss = \", str(np.round(log_loss(val_y, val_preds), 6)))\n",
+    "       \n",
     "    \n",
     "############ PERFORM 1 ITERATRION OF SELF-TRAINING\n",
     "#\n",
@@ -372,7 +372,7 @@
     "############ PERFORM 1 ITERATRION OF SELF-TRAINING\n",
     "\n",
     "\n",
-    "    # predictions\n",
+    "    # save predictions\n",
     "    preds_oof[val_idx]    = clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]\n",
     "    valid_profit[n_fold]  = prediction_reward(val_y, preds_oof[val_idx])[1]\n",
     "    preds_test           += clf.predict_proba(tmp_test, num_iteration = best_iter)[:, 1] / folds.n_splits \n",
