--- a/codes/code_3_stacking.ipynb
+++ b/codes/code_3_stacking.ipynb
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import lightgbm as lgb\n",
     "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import log_loss\n",
     "import scipy.stats\n",
     "import os\n",
     "import time"
@@ -284,12 +285,13 @@
     "                  verbose               = verbose)\n",
     "    clfs.append(clf)\n",
     "    \n",
-    "    # find the best iteration\n",
+    "    # predict validation from the best iteration\n",
     "    #best_iter = clf.best_iteration_\n",
     "    best_iter = np.argmax(clf.evals_result_['valid_1']['profit']) + 1\n",
+    "    val_preds = clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]\n",
     "    print('Best iteration is:')\n",
-    "    print('[' + str(best_iter) + ']   valid_1 profit: ' + \n",
-    "          str(prediction_reward(val_y, clf.predict_proba(val_x, num_iteration = best_iter)[:, 1])[1].astype('int')))\n",
+    "    print('[' + str(best_iter) + ']   valid_1 profit: ' + str(prediction_reward(val_y, val_preds)[1].astype('int')) + \n",
+    "          \"; log_loss = \", str(np.round(log_loss(val_y, val_preds), 6)))\n",
     "       \n",
     "    # predictions\n",
     "    preds_oof[val_idx]    = clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]\n",
@@ -320,13 +322,6 @@
     "print('TOTAL PROFIT = %.0f' % cv_perf)\n",
     "print('----------------------')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -451,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
