--- a/codes/code_3_lgb_main_with_pipeline.ipynb
+++ b/codes/code_3_lgb_main_with_pipeline.ipynb
@@ -3517,7 +3517,7 @@
     "                  eval_metric           = prediction_reward, \n",
     "                  #eval_metric           = \"logloss\", \n",
     "                  #early_stopping_rounds = stopping,\n",
-    "                  #verbose               = verbose\n",
+    "                  verbose               = verbose\n",
     "                 )\n",
     "    clfs.append(clf)\n",
     "    \n",
@@ -3720,7 +3720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
