added xgb models

--- a/codes/code_3_xgb_main_with_pipeline.ipynb
+++ b/codes/code_3_xgb_main_with_pipeline.ipynb
@@ -195,32 +195,32 @@
     "    #'objective':         'binary',\n",
     "    #'metrics':           'logloss',\n",
     "    'eval_metric':       'logloss',\n",
-    "    'n_estimators' :     120,#[int(i) for i in np.arange(20,200.001,20)], #150,\n",
+    "    'n_estimators' :     [85,100],#[int(i) for i in np.arange(60,120.001,5)], #150,\n",
     "    #'bagging_fraction':  0.9,\n",
     "    #'feature_fraction':  0.8,\n",
-    "    'subsample' :        1,#[i for i in np.arange(0.8,1.01,0.025)],#1,\n",
+    "    'subsample' :         1,#[i for i in np.arange(0.8,1.01,0.025)],#1,\n",
     "    #'alpha':             [10**i for i in np.arange(0,8.001,1)],#0.1,\n",
     "    #'lambda':            [2**i for i in np.arange(0,11,1)],#0,\n",
     "    #'eta':               [10**i for i in np.arange(0,11,1)],\n",
     "    #'min_split_gain':    0.01,\n",
-    "    'min_child_weight':  0.85,#[i for i in np.arange(0.6,1.01,0.05)] + [i for i in np.arange(0.8,0.90001,0.01)], #0.85,\n",
+    "    'min_child_weight':  0.975,#[i for i in np.arange(0.8,0.86001,0.005)] + [i for i in np.arange(0.92,1.001,0.005)], #0.85,\n",
     "    #'min_child_samples': 20,\n",
     "\n",
     "    'silent':            True,\n",
     "    'verbosity':         -1,\n",
     "    'learning_rate':     0.31,#0.31,#[i for i in np.arange(0.2,0.5,0.01)],#0.25,\n",
-    "    'max_depth':         6,\n",
+    "    'max_depth':         6,#[i for i in range(2,12)], #6\n",
     "    #'max_leaves':        [i for i in np.arange(0,10,1)],#70,\n",
     "    #'scale_pos_weight':  1,\n",
     "    #'n_estimators':      max_rounds,\n",
     "    #'nthread' :          cores,\n",
     "    #'random_state':      seed,\n",
     "    'colsample_bytree':  1,#[i for i in np.arange(0.5,1.0001,0.05)], \n",
-    "    'colsample_bylevel': 1,#[i for i in np.arange(0.5,1.0001,0.025)],#0.9,#[i for i in np.arange(0.5,1.0001,0.05)], \n",
-    "    'colsample_bynode':  0.6#[i for i in np.arange(0.5,0.65,0.01)]#[i for i in np.arange(0.25,0.75,0.01) if i >=0.36 and i<=0.47 or i >=0.54 and i<=0.64]#0.65,#[i for i in np.arange(0.5,1.0001,0.05)]\n",
+    "    'colsample_bylevel': 1,#[i for i in np.arange(0.5,1.0001,0.05)], \n",
+    "    'colsample_bynode':  0.6,#[i for i in np.arange(0.5,0.65,0.01)],#0.6,#[i for i in np.arange(0.25,0.75,0.01) if i >=0.36 and i<=0.47 or i >=0.54 and i<=0.64]#0.65,#[i for i in np.arange(0.5,1.0001,0.05)]\n",
+    "    'random_state':      [seed + i*10 for i in range(10)]\n",
     "}\n",
-    "# data partitinoing\n",
-    "folds = StratifiedKFold(n_splits = num_folds, random_state = seed, shuffle = shuffle)"
+    "# data partitinoing"
    ]
   },
   {
@@ -305,7 +305,18 @@
     "    cv=num_folds, \n",
     "    n_jobs=cores,\n",
     "    verbose=2)\n",
-    "rs.fit(train[features],y)"
+    "rs.fit(train[features],y)\n",
+    "#df = pd.DataFrame(rs.cv_results_)\n",
+    "variables = [k for k,v in rs.cv_results_.items() if 'param_clf__' in k if len(set(v.data))>1 \n",
+    "             if len(set(v.data)) != 1 and k != 'param_clf__seed' and k != 'param_clf__random_state']\n",
+    "df = pd.DataFrame(rs.cv_results_).groupby(variables).mean().reset_index().sort_values(variables[0])\n",
+    "df2 = pd.DataFrame(rs.cv_results_).groupby(variables).agg(np.std, ddof=1).reset_index().sort_values(variables[0])\n",
+    "df3 = pd.DataFrame(rs.cv_results_).groupby(variables).std().reset_index().sort_values(variables[0])\n",
+    "\n",
+    "tmp = {k.replace('param_',''):v for k,v in dict(df.iloc[df['mean_test_score'].argmax()]).items() if 'param_clf__' in k}\n",
+    "params2 = copy.deepcopy(params)\n",
+    "params2.update(tmp)\n",
+    "params2 = {k:v if isinstance(v,Iterable) and not isinstance(v,str) else [v] for k,v in params2.items() if k != 'clf__seed' if k != 'clf__random_state'}"
    ]
   },
   {
@@ -315,13 +326,16 @@
    "outputs": [],
    "source": [
     "lgb_params_star = {k.replace('lgbmclassifier__',''):v for k,v in rs.best_params_.items() if 'lgbmclassifier' in k}\n",
-    "print(rs.best_score_)\n",
+    "print(rs.best_score_, dict(df.iloc[df['mean_test_score'].argmax()][variables]))\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.plot(rs.cv_results_['param_clf__n_estimators'].data,rs.cv_results_['mean_test_score'])\n",
+    "plt.plot(df[variables[0]],df['mean_test_score'])\n",
+    "#plt.plot(df2[variables[0]],df2['mean_test_score'])\n",
+    "plt.xlabel(variables[0])\n",
+    "plt.show()\n",
     "#m = rs.cv_results_['mean_test_score'].max()\n",
     "#pd.DataFrame(rs.cv_results_['param_clf__min_child_weight'].data[rs.cv_results_['mean_test_score'] >= m]).round(3)\n",
     "#a = np.arange(0.37,0.8,0.01)\n",
-    "#rs.cv_results_['param_clf__colsample_bynode'].data[rs.cv_results_['mean_test_score'] >= m].max()"
+    "#rs.cv_results_['param_clf__colsample_bynode'].data[rs.cv_results_['mean_test_score'] >= m].max()\n"
    ]
   },
   {
@@ -339,7 +353,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted(rs.estimator.get_params().keys())"
+    "# all arguments that can be passed to the pipeline\n",
+    "#sorted(rs.estimator.get_params().keys())\n",
+    "params2.update({'clf__seed':[3500+i for i in range(500)]})\n",
+    "params2['clf__n_estimators'] = [int(i) for i in params2['clf__n_estimators']]\n",
+    "#params2['clf__min_child_weight'] = [0]"
    ]
   },
   {
@@ -348,8 +366,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[i for i in rs.estimator.get_params().keys() if 'eval' in i]\n",
-    "params_tmp = [i.replace('clf__','') for i in rs.estimator.get_params().keys() if 'clf__' in i]"
+    "rs = RandomizedSearchCV(\n",
+    "    estimator = Pipeline([('rs', RobustScaler()),('sm',sm2),('clf',XGBClassifier())]),\n",
+    "    n_iter = 2000,\n",
+    "    param_distributions = params2,\n",
+    "    cv=num_folds, \n",
+    "    n_jobs=cores,\n",
+    "    verbose=2)\n",
+    "rs.fit(train[features],y)"
    ]
   },
   {
@@ -359,6 +383,7 @@
    "outputs": [],
    "source": [
     "### CROSS-VALIDATION LOOP\n",
+    "folds = StratifiedKFold(n_splits = num_folds, random_state = rs.best_params_['clf__seed'], shuffle = shuffle)\n",
     "for n_fold, (trn_idx, val_idx) in enumerate(folds.split(train, y)):\n",
     "    \n",
     "    # data partitioning\n",
@@ -381,8 +406,9 @@
     "    \n",
     "    # train lightGBM\n",
     "    print('Custom early stopping: select the best out of %.0f iterations...' % max_rounds)\n",
-    "    clf = rs.best_estimator_.get_params()['clf']\n",
-    "    #clf = XGBClassifier()\n",
+    "    #clf = rs.best_estimator_.get_params()['clf']\n",
+    "    #clf = XGBClassifier(**params2)\n",
+    "    clf = XGBClassifier(**{k.replace('clf__',''):v for k,v in rs.best_params_.items()})\n",
     "    clf = clf.fit(trn_x, trn_y, \n",
     "                  eval_set              = [(trn_x, trn_y), (val_x, val_y)], \n",
     "                  eval_metric           = prediction_reward_xgb, \n",
@@ -427,13 +453,6 @@
     "print('TOTAL PROFIT = %.0f' % cv_perf)\n",
     "print('--------------------------------')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -535,7 +554,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'xgb_v4'\n",
+    "model = 'xgb_v8'\n",
     "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
