--- a/codes/code_4_stacking_xgb.ipynb
+++ b/codes/code_4_stacking_xgb.ipynb
@@ -150,7 +150,11 @@
     "names = sorted(os.listdir('../oof_preds'))\n",
     "names = [n for n in names if int(n[n.rindex('_')+1:-4]) > min_profit and int(n[n.rindex('_')+1:-4]) !=305]\n",
     "names = [s for s in names if model in s]\n",
-    "\n",
+    "#names.remove('xgb_v2_270.csv')\n",
+    "names.remove('xgb_v8_300.csv')\n",
+    "names.remove('xgb_v8_330.csv')\n",
+    "#names.remove('xgb_v7_270.csv')\n",
+    "#names.remove('xgb_v3_340.csv')\n",
     "# preprocessing loop\n",
     "for name in names:\n",
     "\n",
@@ -178,6 +182,7 @@
     "# display information\n",
     "print('- Train shape:', train.shape)\n",
     "print('- Test shape:',  test.shape)\n",
+    "\n",
     "names"
    ]
   },
@@ -340,8 +345,26 @@
     "\n",
     "###### TRACKING RESULTS (10 folds, start = True, seed = 999)\n",
     "\n",
-    "# V1: 3 xgb models: 355 = 20 + 45 + 45 + 35 + 5 + 25 + 50 + 40 + 50 + 40\n",
-    "# V1: 2 xgb models: 365 = 30 + 45 + 45 + 25 + 5 + 25 + 50 + 50 + 50 + 40"
+    "# V1: 3 xgb models:    355 = 20 + 45 + 45 + 35 +  5 + 25 + 50 + 40 + 50 + 40\n",
+    "# V1: 2 xgb models:    365 = 30 + 45 + 45 + 25 +  5 + 25 + 50 + 50 + 50 + 40\n",
+    "# V1: mult xgb models: 380 = 30 + 55 + 45 + 25 + 15 + 50 + 50 + 20 + 50 + 40\n",
+    "# V1: mult xgb models: 385 = 30 + 55 + 45 + 25 + 25 + 25 + 50 + 40 + 50 + 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_feats = 100\n",
+    "cols = importances[['Feature', 'Importance']].groupby('Feature').mean().sort_values(by = 'Importance', ascending = False)[0:top_feats].index\n",
+    "importance = importances.loc[importances.Feature.isin(cols)]\n",
+    "    \n",
+    "# plot variable importance\n",
+    "plt.figure(figsize = (10, 6))\n",
+    "sns.barplot(x = 'Importance', y = 'Feature', data = importance.sort_values(by = 'Importance', ascending = False))\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -415,6 +438,13 @@
     "cor = np.sum(prev_sub[target] == np.round(sub.reset_index()[target])) / len(sub)\n",
     "print(\"Share of the same predictions: \" + str(np.round(cor, 6)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
