save OOF preds for 2nd stage stacking with different seeds

--- a/codes/code_5_stack_stage2.ipynb
+++ b/codes/code_5_stack_stage2.ipynb
@@ -190,7 +190,6 @@
    "outputs": [],
    "source": [
     "# drop bad features\n",
-    "excluded_feats = ['id']\n",
     "features = [f for f in train.columns if f not in excluded_feats]\n",
     "print(train[features].shape)"
    ]
@@ -331,6 +330,11 @@
     "    model = 'stacking_seed'\n",
     "    perf  = str(round(cv_perf, 0).astype('int'))\n",
     "    name  = model + str(seed) + '_profit_' + perf\n",
+    "    \n",
+    "    # export OOF preds\n",
+    "    oof = pd.DataFrame({'id': train.index, 'fraud': preds_oof})\n",
+    "    oof.to_csv('../stage3_oof_preds/' + str(name) + '.csv', index = False)\n",
+    "    oof.head()\n",
     "\n",
     "    # check submission\n",
     "    sub = pd.DataFrame({'id': test_ids, 'fraud': preds_test})\n",
