blending: check profit on OOF preds, compared mean (410) and median (450) ensembles

--- a/codes/code_6_blending.ipynb
+++ b/codes/code_6_blending.ipynb
@@ -135,6 +135,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import CSV\n",
+    "df = pd.read_csv('../data/data_v3.csv')\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# target variable\n",
+    "target = 'fraud'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# partitioning\n",
+    "train = df[df[target].isnull() == False]\n",
+    "test  = df[df[target].isnull() == True]\n",
+    "print(train.shape)\n",
+    "print(test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# target variable\n",
+    "y = train[target]\n",
+    "test_ids = test['id']\n",
+    "del train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### IMPORT OOF PREDS\n",
+    "\n",
+    "# profit threshold\n",
+    "min_profit = 250\n",
+    "\n",
+    "# list names\n",
+    "names = sorted(os.listdir('../stage3_oof_preds'))\n",
+    "names = [n for n in names if int(n[n.rindex('_')+1:-4]) > min_profit]\n",
+    "\n",
+    "# preprocessing loop\n",
+    "for name in names:\n",
+    "\n",
+    "    # load preds\n",
+    "    tmp_tr = pd.read_csv('../stage3_oof_preds/'   + str(name))\n",
+    "    tmp_te = pd.read_csv('../submissions/' + str(name))\n",
+    "\n",
+    "    # sort OOF preds by ID\n",
+    "    if 'id' in tmp_tr:\n",
+    "        del tmp_tr['id']\n",
+    "    \n",
+    "    # rename columns\n",
+    "    tmp_tr.columns = [name]    \n",
+    "    tmp_te.columns = [name]    \n",
+    "\n",
+    "    # cbind data\n",
+    "    if name == names[0]:     \n",
+    "        train = tmp_tr \n",
+    "        test  = tmp_te\n",
+    "    else:\n",
+    "        train = pd.concat([train, tmp_tr], axis = 1)\n",
+    "        test  = pd.concat([test,  tmp_te], axis = 1)\n",
+    "        \n",
+    "# display information\n",
+    "print('- Train shape:', train.shape)\n",
+    "print('- Test shape:',  test.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,9 +236,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select models\n",
-    "features = [f for f in test.columns if 'stacking_seed' in f]\n",
-    "print(test[features].shape)"
+    "# keep best model per seed\n",
+    "models = []\n",
+    "for seed in range(1000, 1010):\n",
+    "    seed_models  = [x for x in list(train.columns) if str(seed) in x]\n",
+    "    seed_profits = [x[-7:-4] for x in seed_models]\n",
+    "    best_model   = seed_models[np.argmax(seed_profits)]\n",
+    "    models.append(best_model)\n",
+    "models"
    ]
   },
   {
@@ -158,8 +252,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mean ensemble\n",
-    "means = np.array(test[features].mean(axis = 1))"
+    "# median ensemble\n",
+    "means_tr = np.array(train[models].median(axis = 1))\n",
+    "means_te = np.array(test[models].median(axis  = 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check profit on training data\n",
+    "prediction_reward(y, np.round(means_tr))[1]\n",
+    "\n",
+    "# mean:   profit = 410\n",
+    "# median: profit = 450"
    ]
   },
   {
@@ -176,7 +284,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "name = 'mean_ensemble'"
+    "name = 'median_ensemble'"
    ]
   },
   {
@@ -186,7 +294,7 @@
    "outputs": [],
    "source": [
     "# check submission\n",
-    "sub = pd.DataFrame({'id': test_ids, 'fraud': means})\n",
+    "sub = pd.DataFrame({'id': test_ids, 'fraud': means_te})\n",
     "sub['fraud'] = np.round(sub['fraud']).astype('int')\n",
     "sub.head()"
    ]
