fix missing line

--- a/codes/code_5_stack_stage2.ipynb
+++ b/codes/code_5_stack_stage2.ipynb
@@ -190,6 +190,7 @@
    "outputs": [],
    "source": [
     "# drop bad features\n",
+    "excluded_feats = ['id']\n",
     "features = [f for f in train.columns if f not in excluded_feats]\n",
     "print(train[features].shape)"
    ]
