try mean, median, gmean, min and max blending ensembles

--- a/codes/code_6_blending.ipynb
+++ b/codes/code_6_blending.ipynb
@@ -92,54 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### extract test IDs\n",
-    "\n",
-    "# import CSV\n",
-    "df = pd.read_csv('../data/data_v3.csv')\n",
-    "\n",
-    "# partitioning\n",
-    "target = 'fraud'\n",
-    "test  = df[df[target].isnull() == True]\n",
-    "\n",
-    "# extract IDs\n",
-    "test_ids = test['id']\n",
-    "del test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### IMPORT PREDS\n",
-    "\n",
-    "# list names\n",
-    "names = sorted(os.listdir('../submissions'))\n",
-    "\n",
-    "# preprocessing loop\n",
-    "for name in names:\n",
-    "\n",
-    "    # load preds\n",
-    "    tmp_te = pd.read_csv('../submissions/' + str(name))\n",
-    "    tmp_te.columns = [name]    \n",
-    "\n",
-    "    # cbind data\n",
-    "    if name == names[0]:     \n",
-    "        test  = tmp_te\n",
-    "    else:\n",
-    "        test  = pd.concat([test,  tmp_te], axis = 1)\n",
-    "        \n",
-    "# display information\n",
-    "print('- Data shape:',  test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# import CSV\n",
     "df = pd.read_csv('../data/data_v3.csv')\n",
     "print(df.shape)"
@@ -252,9 +204,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# median ensemble\n",
-    "means_tr = np.array(train[models].median(axis = 1))\n",
-    "means_te = np.array(test[models].median(axis  = 1))"
+    "# try different ensembles\n",
+    "from scipy.stats.mstats import gmean\n",
+    "armean_tr = np.array(train[models].mean(axis    = 1))\n",
+    "median_tr = np.array(train[models].median(axis  = 1))\n",
+    "gemean_tr = gmean(np.array(train[models]), axis = 1)\n",
+    "min_tr    = np.array(train[models].min(axis     = 1))\n",
+    "max_tr    = np.array(train[models].max(axis     = 1))"
    ]
   },
   {
@@ -264,10 +220,27 @@
    "outputs": [],
    "source": [
     "# check profit on training data\n",
-    "prediction_reward(y, np.round(means_tr))[1]\n",
+    "print(prediction_reward(y, np.round(armean_tr))[1])\n",
+    "print(prediction_reward(y, np.round(median_tr))[1])\n",
+    "print(prediction_reward(y, np.round(gemean_tr))[1])\n",
+    "print(prediction_reward(y, np.round(min_tr))[1])\n",
+    "print(prediction_reward(y, np.round(max_tr))[1])\n",
     "\n",
-    "# mean:   profit = 410\n",
-    "# median: profit = 450"
+    "# amean:  420\n",
+    "# median: 450\n",
+    "# gmean:  410\n",
+    "# min:    360\n",
+    "# max:    475"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute median ensemble\n",
+    "blend = np.array(test[models].max(axis  = 1))"
    ]
   },
   {
@@ -284,7 +257,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "name = 'median_ensemble'"
+    "name = 'max_ensemble'"
    ]
   },
   {
@@ -294,7 +267,7 @@
    "outputs": [],
    "source": [
     "# check submission\n",
-    "sub = pd.DataFrame({'id': test_ids, 'fraud': means_te})\n",
+    "sub = pd.DataFrame({'id': test_ids, 'fraud': blend})\n",
     "sub['fraud'] = np.round(sub['fraud']).astype('int')\n",
     "sub.head()"
    ]
